# vulkan-mini-libs

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  generate.sh  generate_all.sh  make_all.sh  vk_equality_checks.hpp  vulkan_header_version.cmake
example/: CMakeLists.txt  error_code.cpp  standalone.cpp  string_parsing.cpp
include/: vk_enum_stringifier.hpp  vk_equality_checks.hpp  vk_error_code.hpp  vk_string_parsing.hpp  vk_struct_cleanup.hpp  vk_value_serialization.hpp
include/detail_equality_checks/: vk_equality_checks_v100.hpp  vk_equality_checks_v101.hpp  vk_equality_checks_v102.hpp  vk_equality_checks_v103.hpp  vk_equality_checks_v104.hpp  vk_equality_checks_v105.hpp  vk_equality_checks_v106.hpp  vk_equality_checks_v107.hpp  vk_equality_checks_v108.hpp  vk_equality_checks_v109.hpp  vk_equality_checks_v110.hpp  vk_equality_checks_v111.hpp  vk_equality_checks_v112.hpp  vk_equality_checks_v113.hpp  vk_equality_checks_v114.hpp  vk_equality_checks_v115.hpp  vk_equality_checks_v116.hpp  vk_equality_checks_v117.hpp  vk_equality_checks_v118.hpp  vk_equality_checks_v119.hpp  vk_equality_checks_v120.hpp  vk_equality_checks_v121.hpp  vk_equality_checks_v122.hpp  vk_equality_checks_v123.hpp  vk_equality_checks_v124.hpp  vk_equality_checks_v125.hpp  vk_equality_checks_v126.hpp  vk_equality_checks_v127.hpp  vk_equality_checks_v128.hpp  vk_equality_checks_v129.hpp  vk_equality_checks_v130.hpp  vk_equality_checks_v131.hpp  vk_equality_checks_v132.hpp  vk_equality_checks_v133.hpp  vk_equality_checks_v134.hpp  vk_equality_checks_v135.hpp  vk_equality_checks_v136.hpp  vk_equality_checks_v137.hpp  vk_equality_checks_v138.hpp  vk_equality_checks_v139.hpp  (+93 more)
include/detail_error_code/: vk_error_code_v100.hpp  vk_error_code_v101.hpp  vk_error_code_v102.hpp  vk_error_code_v103.hpp  vk_error_code_v104.hpp  vk_error_code_v105.hpp  vk_error_code_v106.hpp  vk_error_code_v107.hpp  vk_error_code_v108.hpp  vk_error_code_v109.hpp  vk_error_code_v110.hpp  vk_error_code_v111.hpp  vk_error_code_v112.hpp  vk_error_code_v113.hpp  vk_error_code_v114.hpp  vk_error_code_v115.hpp  vk_error_code_v116.hpp  vk_error_code_v117.hpp  (+115 more)
pre-generated/: CMakeLists.txt  vk_enum_converter_v132.cpp  vk_enum_converter_v132.hpp  vk_enum_stringifier.hpp  vk_enum_stringifier_v100.cpp  vk_enum_stringifier_v101.cpp  vk_enum_stringifier_v102.cpp  vk_enum_stringifier_v103.cpp  vk_enum_stringifier_v104.cpp  vk_enum_stringifier_v105.cpp  vk_enum_stringifier_v106.cpp  vk_enum_stringifier_v107.cpp  vk_enum_stringifier_v108.cpp  vk_enum_stringifier_v109.cpp  vk_enum_stringifier_v110.cpp  vk_enum_stringifier_v111.cpp  vk_enum_stringifier_v112.cpp  vk_enum_stringifier_v113.cpp  vk_enum_stringifier_v114.cpp  vk_enum_stringifier_v115.cpp  vk_enum_stringifier_v116.cpp  vk_enum_stringifier_v117.cpp  vk_enum_stringifier_v118.cpp  vk_enum_stringifier_v119.cpp  vk_enum_stringifier_v120.cpp  vk_enum_stringifier_v121.cpp  vk_enum_stringifier_v122.cpp  vk_enum_stringifier_v123.cpp  vk_enum_stringifier_v124.cpp  vk_enum_stringifier_v125.cpp  vk_enum_stringifier_v126.cpp  vk_enum_stringifier_v127.cpp  vk_enum_stringifier_v128.cpp  vk_enum_stringifier_v129.cpp  vk_enum_stringifier_v130.cpp  vk_enum_stringifier_v131.cpp  vk_enum_stringifier_v132.cpp  vk_enum_stringifier_v132.hpp  vk_enum_stringifier_v133.cpp  vk_enum_stringifier_v134.cpp  (+30 more)
pre-generated/value_stringifier/include/: vk_value_stringifier.hpp
pre-generated/value_stringifier/src/: vk_value_stringifier_v100.cpp  vk_value_stringifier_v101.cpp  vk_value_stringifier_v102.cpp  vk_value_stringifier_v103.cpp  vk_value_stringifier_v104.cpp  vk_value_stringifier_v105.cpp  vk_value_stringifier_v106.cpp  vk_value_stringifier_v107.cpp  vk_value_stringifier_v108.cpp  vk_value_stringifier_v109.cpp  vk_value_stringifier_v110.cpp  vk_value_stringifier_v111.cpp  vk_value_stringifier_v112.cpp  vk_value_stringifier_v113.cpp  vk_value_stringifier_v114.cpp  vk_value_stringifier_v115.cpp  vk_value_stringifier_v116.cpp  vk_value_stringifier_v117.cpp  vk_value_stringifier_v118.cpp  vk_value_stringifier_v119.cpp  vk_value_stringifier_v120.cpp  vk_value_stringifier_v121.cpp  vk_value_stringifier_v122.cpp  vk_value_stringifier_v123.cpp  vk_value_stringifier_v124.cpp  vk_value_stringifier_v125.cpp  vk_value_stringifier_v126.cpp  vk_value_stringifier_v127.cpp  vk_value_stringifier_v128.cpp  vk_value_stringifier_v129.cpp  vk_value_stringifier_v130.cpp  vk_value_stringifier_v131.cpp  vk_value_stringifier_v132.cpp  vk_value_stringifier_v133.cpp  vk_value_stringifier_v134.cpp  vk_value_stringifier_v135.cpp  vk_value_stringifier_v136.cpp  vk_value_stringifier_v137.cpp  vk_value_stringifier_v138.cpp  vk_value_stringifier_v139.cpp  (+33 more)
scripts/: equality_check_end.txt  equality_check_start.txt  error_code_end.txt  error_code_start.txt  struct_cleanup_end.txt  struct_cleanup_start.txt  vulkan_string_parsing_end.txt  vulkan_string_parsing_start.txt
src/: equality_check.cpp  error_code.cpp  header_str.hpp  parse_xml.hpp  serialization_strings.hpp  stringifier_strings.h  struct_cleanup.cpp  value_serialization.cpp  vk_enum_converter.cpp  vk_enum_stringifier.cpp  vk_stringifier.cpp  yaml_generator.cpp
test/: CMakeLists.txt  equality_checks.cpp  error_code.cpp  from_string.cpp  parsing.cpp  serialization.cpp  to_string.cpp
(+473 files in other folders)
